@@ -1,3 +1,3 @@
 PROJNAME=zeo
-VERSION=1.14.10
-DEPENDENCY="zeda=1.8.0;zm=1.8.0"
+VERSION=1.14.11
+DEPENDENCY="zeda=1.8.11;zm=1.8.14"
