@@ -1,3 +1,4 @@
+2024. 3.19. Modified specifications of zAxisFromStr, zDirFromStr, _zRGBRatio, _zRGBHex, and zRGBDec to accept const pointers to strings. [zeo_misc, zeo_render_color]
 2024. 1. 5. Added zNURBS3DSliceNum, zNURBS3D1SliceNum, and zNURBS3D1SetSliceNum. [zeo_nurbs]
 2024. 1. 3. Defined zFrame3DVec. [zeo_frame3d]
 2024. 1. 3. Redefined zMat3DVec. [zeo_mat3d]
